<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/margin_10">


    <RelativeLayout
        android:id="@+id/relClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/image_close"
            android:layout_height="@dimen/image_close"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_10"
            android:src="@mipmap/clos_popup_icon" />

    </RelativeLayout>

    <ListView
        android:id="@+id/lisProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/margin_5"
        android:scrollbars="none"></ListView>


    <LinearLayout
        android:id="@+id/linBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_15"
        android:orientation="horizontal">

        <com.rogi.View.TextViewPlus
            android:id="@+id/btnAdd"
            style="@style/BtnStyle"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/additional_add"
            android:textSize="@dimen/xxxxfontSize"
            app:customFont="@string/font_regular" />


        <com.rogi.View.TextViewPlus
            android:id="@+id/btnCancel"
            style="@style/BtnStyleWhite"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/additional_cancel"
            app:customFont="@string/font_regular" />


    </LinearLayout>


</LinearLayout>
